After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690476 - regression: unable to stop rtsp stream
regression: unable to stop rtsp stream
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.4
Other Linux
: Normal blocker
: 1.0.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-19 07:38 UTC by Jan ONDREJ (SAL)
Modified: 2012-12-20 16:14 UTC
See Also:
GNOME target: ---
GNOME version: 3.3/3.4



Description Jan ONDREJ (SAL) 2012-12-19 07:38:04 UTC
After update to gst 1.0.4, stopping of rtsp stream will hang, never return from set_state function.

This is my code:
  self.player.set_state(Gst.State.NULL)

Other streams/formats works well. I use playbin element to play any format.

Downgrading to 1.0.3 resolved my problem.
Comment 1 Wim Taymans 2012-12-20 15:53:16 UTC
could you provide a backtrace?
Comment 2 Wim Taymans 2012-12-20 16:14:16 UTC
commit 8cfec6a88db506ea97cc687e27df6f6532a847a9
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Thu Dec 20 17:12:30 2012 +0100

    rtspsrc: fix cmd comparison
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=690476