rtspsrc: fix cmd comparison

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=690476